# julia_exos_development

./: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  exos-component-extension-0.0.1.vsix  exos-component-extension-0.0.2.vsix  exos-component-extension-0.0.3.vsix  exos-component-extension-0.0.4.vsix  exos-component-extension-0.0.5.vsix  exos-component-extension-0.0.6.vsix  exos-component-extension-0.0.7.vsix  exos-component-extension-1.0.0.vsix  exos-component-extension-1.0.1.vsix  exos-component-extension-1.0.2.vsix  exos-component-extension-1.0.3.vsix  exos-component-extension-1.0.4.vsix  exos-component-extension-1.0.5.vsix  exos-component-extension-1.1.0-1118.vsix  exos-component-extension-1.1.0-1125.vsix  exos-component-extension-1.1.0.vsix  exos-component-extension-1.1.1.vsix  exos-component-extension-1.1.2.vsix  exos-component-extension-1.1.3.vsix  exos-component-extension-1.1.4.vsix  exos-component-extension-1.1.5.vsix  exos-component-extension-1.1.6.vsix  exos-component-extension-1.2.0.vsix  exos-component-extension-1.2.1.vsix  exos-component-extension-1.9.9.vsix  exos-component-extension-2.0.0-1.vsix  exos-component-extension-2.0.0-10.vsix  exos-component-extension-2.0.0-7.vsix  exos-component-extension-2.0.0-9.vsix  exos_header.js  exos_template.js  exos_template_ar.js  exos_template_as.js  exos_template_linux.js  extension.js  julia  (+3 more)
Components/: Datamodel.js  ExosPackage.js
JULIA_PK4/stringandarray/: Project.toml  README.md
JULIA_PK4/stringandarray/old/: application copy 2.jl  application_3.jl  application_beforeRef.jl  exos_stringandarray copy.c  exos_stringandarray.c  exos_stringandarray.h  test.jl  test2.jl  test3.jl
JULIA_PK4/stringandarray/src/: CMakeLists.txt  app_declaration.jl  app_main.jl  print_functions.jl  stringandarray.jl  test.jl  test_exos.c  test_exos.h
JULIA_PK4/stringandarray/src/TEST/: TEST_app_declaration.jl  TEST_app_main.jl  TEST_print_functions.jl  TEST_stringandarray.jl
JULIA_PK4/stringandarray/test/: runtests.jl
JULIA_PKG2/exos_julia/: Manifest.toml  Project.toml
JULIA_PKG2/exos_julia/src/: application.jl  exos_julia.jl  test.jl
JULIA_PKG2/exos_julia/test/: runtests.jl
c-static-lib-template/: c_static_lib_template.js  template.js  template_ar.js  template_linux.js  update_static_c_lib.js
c-template/: exos_template.js  exos_template_ar.js  exos_template_as.js  exos_template_linux.js
c-template-n-api/: DeepNest.typ  exos_template.js  exos_template_linux_n_api.js
c-template-n-api/WaterTank/: .gitignore  Package.pkg  WaterTank.exospkg
c-template-n-api/WaterTank/Linux/: CMakeLists.txt  Package.pkg  binding.gyp  build.sh  exos_watertank.h  index.js  libwatertank.c  package-lock.json  package.json  watertank.js
c-template-n-api/WaterTank/WaterTank/: ANSIC.lby  WaterTank.fun  WaterTank.typ  watertank.c
c-template-n-api/WaterTank/WaterTank_0/: IEC.prg  WaterTank.st  WaterTank.var
cpp-template/: exos_template.js  exos_template_cpp.js  exos_template_linux.js
n-api/: README.md
not_yet_included/: tasks.js
not_yet_included/c-template-n-api/: exos_template.js
not_yet_included/run-package/: runPackage.js
not_yet_included/run-package/test/Linux/: CMakeLists.txt  build.sh  termination.h
run-package/: runPackage.js
src/: StringAndArray.typ  asproject.js  datamodel.js  datamodel.md  exoscomponent.js  exoscomponent_c_template.js  exosconsole.js  exosexport.js  exospackage.js  exospkg.js  linuxshell.js  string.c  template.js  template_ar_dynamic.js  template_linux_c.js
src/BUILD_JULIA/: CMakeCache.txt  CMakeLists.txt  build.sh  main.jl  my_module.jl
src/BUILD_JULIA/HelloWorld/: Project.toml
src/BUILD_JULIA/HelloWorld/src/: HelloWorld.jl
src/StringAndArray/: StringAndArray.exospkg
src/StringAndArray23424/: StringAndArray.exospkg
src/StringAndArray_C/: StringAndArray.exospkg
src/StringAndArray_C_BUILD/: Package.pkg
src/StringAndArray_JL/: StringAndArray copy.exospkg  StringAndArray.exospkg
src/StringAndArray_JL/Linux/: CMakeLists.txt  Package_old.pkg  build.sh  exos_stringandarray.c  stringandarray.jl  test.jl  test2.jl  test222.jl
src/StringAndArray_JS/: StringAndArray.exospkg
src/StringAndArray_PY/: StringAndArray.exospkg
src/StringAndArray_PY_BUILD/: StringAndArray.exospkg
src/components/: exoscomponent.js  exoscomponent_ar.js  exoscomponent_c.js  exoscomponent_c_template.js  exoscomponent_cpp.js  exoscomponent_js.js  exoscomponent_julia copy.js  exoscomponent_julia.js  exoscomponent_julia_original.js  exoscomponent_napi.js  exoscomponent_python.js  exoscomponent_swig.js
src/exos_julia/: Package.pkg  exos_julia.exospkg
swig/: Readme.md  swig_c_template.js  template.js  template_linux.js  template_linux_nodejs.js  template_linux_python.js
swig/NodeJS/: How2nodeJS.md  binding.gyp  exos_nodejs.h  libnodejs.c  libnodejs.h  libnodejs.i  libnodejs_wrap.cpp
swig/cmaketest/: CMakeLists.txt  Makefile  exos_mouse.h  libmouse.c  libmouse.h  libmouse.i  libmouse_swig.c  mousetest.py
swig/mousetest/: Makefile  exos_mouse.h  libmouse.c  libmouse.h  libmouse.i  main.c  mousetest.py
swig/mousetest_cb/: Makefile  Mouse.typ  exos_mouse.h  libmouse.c  libmouse.h  libmouse.i  main.c  mousetest.py
template/: ar.js
test/suite/: index.js
test/suite/template_generation/expected/StringAndArray_c-static_c-static/Linux/: CMakeLists.txt  Package.pkg  libstringandarray.c  stringandarray.c  termination.h
test/suite/template_generation/expected/StringAndArray_c-static_py/Linux/: CMakeLists.txt  Package.pkg  libstringandarray.h  libstringandarray.i  stringandarray.py
test/suite/template_generation/expected/ros_topics_typ_c-api_cpp/Linux/: CMakeLists.txt  Package.pkg  build.sh  ros_topics_typ.cpp  ros_topics_typDatamodel.cpp  ros_topics_typDatamodel.hpp  ros_topics_typDataset.hpp
test/suite/template_generation/expected/ros_topics_typ_c-static_c-static/Linux/: CMakeLists.txt  Package.pkg  ros_topics_typ.c
test/suite/template_generation/expected/ros_topics_typ_cpp_napi/Linux/: CMakeLists.txt  Package.pkg  binding.gyp  build.sh  libros_topics_typ.c  package-lock.json  package.json  ros_topics_typ.js
(+176 files in other folders)
